# raytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
modules/: FindSDL2.cmake
src/: camera.c  camera.h  gpu.c  gpu.h  kernel.cl  kernel.h  main.c  material.h  object.c  object.h  octree.c  octree.h  plane.h  pointlight.h  ray.h  raytracer.c  raytracer.h  scene.c  scene.h  sphere.h  triangle.h  vertextable.c  vertextable.h
src/util/: angle.c  angle.h  color.c  color.h  dimension.h  image.c  image.h  vec3.h
src/utils/: angle.c  dimension.h  file.c  file.h  image.c  image.h  math.c  math.h  random.c  random.h  stringbuilder.c  stringbuilder.h  vec3.c  vec3.h
